fix cut off history dropdown

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -13,3 +13,6 @@ body
 
 .height250
 	height: 250px
+
+.my-history-dropdown-menu.q-menu[role="menu"]
+	max-width: none !important;
